반영할게여~1022.6.21

--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main_media.css">
@@ -98,7 +99,7 @@
 
     <section class="main_visual">
       <div class="zoom_container">
-        <h1 class="main_heading">StudioDragon<br />list of work</h1>
+        <h1 class="main_heading">Every Story<br />We Create</h1>
         <div class="zoom_item" data-layer="2">
           <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="">
         </div>
@@ -142,8 +143,7 @@
         steal your heart, and change the world.</p>
     </section>
 
-
-    <!--     <div class="signature-works">
+    <!--<div class="signature-works">
       <h2 class="tit_eng">SIGNATURE WORKS</h2>
     </div>
     <div class="sw_img">
@@ -161,27 +161,26 @@
       </div>
     </div> -->
     <section class="last-section">
-      <h2>A NEW STORY BEGINS</h2>
+      <h2>signature - works</h2>
       <div class="slide inner">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/Queen of Tears.webp"
-                  alt=""><span>Queen of
-                  Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/The Glory4.jpg" alt=""><span>The
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt="">
+                <span>Queen of Tears</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/The Glory4.jpg" alt=""><span>The
                   Glory</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/Marry My Husband.jpg"
-                  alt=""><span>Marry My Husband</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/TyphoonFamily.webp"
-                  alt=""><span>Typhoon Family</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/TheUncannyCounter2.webp"
-                  alt=""><span>The Uncanny Counter</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/ThePlayer2.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Marry My Husband.jpg" alt=""><span>Marry My
+                  Husband</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/TyphoonFamily.webp" alt=""><span>Typhoon
+                  Family</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/TheUncannyCounter2.webp" alt=""><span>The Uncanny
+                  Counter</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/ThePlayer2.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/Gyeongseong Creature.webp"
-                  alt=""><span>Gyeongseong Creature</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/StudioDragon/lee/img/WhentheStars Gossip3.webp"
-                  alt=""><span>When the Stars Gossip</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Gyeongseong Creature.webp" alt=""><span>Gyeongseong
+                  Creature</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/WhentheStars Gossip3.webp" alt=""><span>When the
+                  Stars Gossip</span></a></div>
           </div>
         </div>
       </div>
