--- a/work_ryu.html
+++ b/work_ryu.html
@@ -126,7 +126,9 @@
                                             <p class="meta_info">2022 | Revenge · Psychological thriller | 18+</p>
                                             <div class="description">
                                                 <p>"WELCOME TO MY HELL"</p>
-                                                <p>Years after surviving horrific abuse in high school, a woman puts an elaborate revenge scheme in motion to make the perpetrators pay for their crimes.</p>
+                                                <p>Years after surviving horrific abuse in high school, a woman puts an
+                                                    elaborate revenge scheme in motion to make the perpetrators pay for
+                                                    their crimes.</p>
                                             </div><!-- .description -->
                                         </div><!-- .text_box_left -->
 
@@ -244,8 +246,7 @@
                             <!-- Episode 1 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep01.png"
-                                        alt="Episode 1">
+                                    <img src="Work_Ryu/asset/ep01.png" alt="Episode 1">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 01</h3>
@@ -258,8 +259,7 @@
                             <!-- Episode 2 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep02.png"
-                                        alt="Episode 2">
+                                    <img src="Work_Ryu/asset/ep02.png" alt="Episode 2">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 02</h3>
@@ -272,8 +272,7 @@
                             <!-- Episode 3 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep03.png"
-                                        alt="Episode 3">
+                                    <img src="Work_Ryu/asset/ep03.png" alt="Episode 3">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 03</h3>
@@ -286,8 +285,7 @@
                             <!-- Episode 4 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep04.png"
-                                        alt="Episode 4">
+                                    <img src="Work_Ryu/asset/ep04.png" alt="Episode 4">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 04</h3>
@@ -300,8 +298,7 @@
                             <!-- Episode 5 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep05.png"
-                                        alt="Episode 5">
+                                    <img src="Work_Ryu/asset/ep05.png" alt="Episode 5">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 05</h3>
@@ -314,8 +311,7 @@
                             <!-- Episode 6 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep06.png"
-                                        alt="Episode 6">
+                                    <img src="Work_Ryu/asset/ep06.png" alt="Episode 6">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 06</h3>
@@ -327,8 +323,7 @@
                             <!-- Episode 7 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep07.png"
-                                        alt="Episode 7">
+                                    <img src="Work_Ryu/asset/ep07.png" alt="Episode 7">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 07</h3>
@@ -341,8 +336,7 @@
                             <!-- Episode 8 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep08.png"
-                                        alt="Episode 8">
+                                    <img src="Work_Ryu/asset/ep08.png" alt="Episode 8">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 08</h3>
@@ -354,8 +348,7 @@
                             <!-- Episode 9 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep09.png"
-                                        alt="Episode 9">
+                                    <img src="Work_Ryu/asset/ep09.png" alt="Episode 9">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 09</h3>
@@ -368,8 +361,7 @@
                             <!-- Episode 10 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep10.png"
-                                        alt="Episode 10">
+                                    <img src="Work_Ryu/asset/ep10.png" alt="Episode 10">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 10</h3>
@@ -382,8 +374,7 @@
                             <!-- Episode 11 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep11.png"
-                                        alt="Episode 11">
+                                    <img src="Work_Ryu/asset/ep11.png" alt="Episode 11">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 11</h3>
@@ -396,8 +387,7 @@
                             <!-- Episode 12 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep12.png"
-                                        alt="Episode 12">
+                                    <img src="Work_Ryu/asset/ep12.png" alt="Episode 12">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 12</h3>
@@ -410,8 +400,7 @@
                             <!-- Episode 13 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep13.png"
-                                        alt="Episode 13">
+                                    <img src="Work_Ryu/asset/ep13.png" alt="Episode 13">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 13</h3>
@@ -424,8 +413,7 @@
                             <!-- Episode 14 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep14.png"
-                                        alt="Episode 14">
+                                    <img src="Work_Ryu/asset/ep14.png" alt="Episode 14">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 14</h3>
@@ -438,8 +426,7 @@
                             <!-- Episode 15 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep15.png"
-                                        alt="Episode 15">
+                                    <img src="Work_Ryu/asset/ep15.png" alt="Episode 15">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 15</h3>
@@ -452,8 +439,7 @@
                             <!-- Episode 16 -->
                             <div class="episode_card">
                                 <div class="episode_image">
-                                    <img src="Work_Ryu/asset/ep16.png"
-                                        alt="Episode 16">
+                                    <img src="Work_Ryu/asset/ep16.png" alt="Episode 16">
                                 </div><!-- .episode_image -->
                                 <div class="episode_info">
                                     <h3 class="episode_title">EP 16</h3>
@@ -577,8 +563,7 @@
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <img class="video_poster"
-                                    src="work_ryu/asset/behindvideo_unactive_01.png">
+                                <img class="video_poster" src="work_ryu/asset/behindvideo_unactive_01.png">
                             </div><!-- .video_thumbnail -->
 
                             <div class="video_textbox">
@@ -612,8 +597,7 @@
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <img class="video_poster"
-                                    src="work_ryu/asset/behindvideo_unactive_02.png"
+                                <img class="video_poster" src="work_ryu/asset/behindvideo_unactive_02.png"
                                     alt="Ready, Set, Debate!">
                             </div><!-- .video_thumbnail -->
 
@@ -648,8 +632,7 @@
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <img class="video_poster"
-                                    src="work_ryu/asset/behindvideo_unactive_03.png"
+                                <img class="video_poster" src="work_ryu/asset/behindvideo_unactive_03.png"
                                     alt="THE GLORY EXAM">
                             </div><!-- .video_thumbnail -->
 
@@ -865,7 +848,8 @@
 
                         <div class="footer_info">
                             <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu,
+                                Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
                             <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
                         </div><!-- //.footer_info -->
                     </div><!-- //.footer_bottom -->
