--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -188,7 +188,6 @@
 
     <section class="onAir-section">
       <h2 class="on-alr">ON - AIR</h2>
-
       <div class="button-group">
         <button class="all">ALL</button>
         <button class="alr">AIR</button>
@@ -217,7 +216,7 @@
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/My Dearest Nemesis.webp" alt="Poster 3">
+            <img src="./lee/img/MyDearestNemesis2.webp" alt="Poster 3">
             <span class="poster-title">My Dearest Nemesis</span>
           </a>
         </li>
