--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -8,7 +8,7 @@
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>studiodragon</title>
-    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/reset.css">
