--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -94,54 +94,6 @@
     </header>
 
 
-    <!-- https://codepen.io/iamryanyu/pen/PwZoovK !!!!!!!!!!-->
-    <!-- https://codepen.io/daniel-mu-oz/pen/gbaVNwL -->
-
-    <section class="main_visual">
-      <div class="zoom_container">
-        <h1 class="main_heading">Every Story<br />We Create</h1>
-        <div class="zoom_item" data-layer="2">
-          <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="">
-        </div>
-        <div class="zoom_item" data-layer="2">
-          <img src="lee/img/comingsoon/Genie, Make A Wish(sd).jpg" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="1">
-          <img src="lee/img/comingsoon/Genie, Make A Wish(sd2).jpg" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="2">
-          <img src="lee/img/comingsoon/Hotel Del Luna.webp" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/When the Stars Gossip.webp" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="1">
-          <img src="lee/img/comingsoon/Our Unwritten Seoul2.jpg" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/Genie, Make A Wish(sd5).jpg" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="1">
-          <img src="lee/img/comingsoon/Queen of Tears1-2.webp" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/Doona!.webp" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="2">
-          <img src="lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
-        </div>
-        <div class="zoom_item" data-layer="1">
-          <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
-        </div>
-      </div>
-    </section>
-    <section class="text_reveal_section">
-      <p class="opacity_reveal">If you're lucky, Studio Dragon will come into your story,
-        steal your heart, and change the world.</p>
-    </section>
 
     <!--<div class="signature-works">
       <h2 class="tit_eng">SIGNATURE WORKS</h2>
@@ -160,26 +112,29 @@
         <p>Marry My Husband</p>
       </div>
     </div> -->
+
+
+
     <section class="last-section">
       <h2>signature - works</h2>
       <div class="slide inner">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt="">
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Queen of Tears.webp" alt="">
                 <span>Queen of Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/The Glory4.jpg" alt=""><span>The
+            <div class="swiper-slide"><a href="#"><img src="lee/img/The Glory4.jpg" alt=""><span>The
                   Glory</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Marry My Husband.jpg" alt=""><span>Marry My
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Marry My Husband.jpg" alt=""><span>Marry My
                   Husband</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/TyphoonFamily.webp" alt=""><span>Typhoon
+            <div class="swiper-slide"><a href="#"><img src="lee/img/TyphoonFamily.webp" alt=""><span>Typhoon
                   Family</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/TheUncannyCounter2.webp" alt=""><span>The Uncanny
+            <div class="swiper-slide"><a href="#"><img src="lee/img/TheUncannyCounter2.webp" alt=""><span>The Uncanny
                   Counter</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/ThePlayer2.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="lee/img/ThePlayer2.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Gyeongseong Creature.webp" alt=""><span>Gyeongseong
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Gyeongseong Creature.webp" alt=""><span>Gyeongseong
                   Creature</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/WhentheStars Gossip3.webp" alt=""><span>When the
+            <div class="swiper-slide"><a href="#"><img src="lee/img/WhentheStars Gossip3.webp" alt=""><span>When the
                   Stars Gossip</span></a></div>
           </div>
         </div>
