--- a/work_ryu.html
+++ b/work_ryu.html
@@ -1023,7 +1023,7 @@
                                     </div>
                                     <button class="btn_go">go</button>
                                 </div>
-                            </div>
+                            </div><!-- //.event_content -->
                         </div>
                     </div>
                 </section><!-- //.chat_event_section -->
