하나 더 만들었어요 10.23.9.42

--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -139,7 +139,7 @@
       </div>
     </section>
     <section class="text_reveal_section">
-      <p class="opacity_reveal">If you're lucky, Studio Dragon will come into your story,
+      <p class="opacity_reveal" id="animated-text">If you're lucky, Studio Dragon will come into your story,
         steal your heart, and change the world.</p>
     </section>
 
