--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -101,40 +101,40 @@
       <div class="zoom_container">
         <h1 class="main_heading">Every Story<br />We Create</h1>
         <div class="zoom_item" data-layer="2">
-          <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="">
+          <img src="lee/img/Bon.jpg" alt="">
         </div>
         <div class="zoom_item" data-layer="2">
-          <img src="lee/img/comingsoon/Genie, Make A Wish(sd).jpg" alt="" />
+          <img src="lee/img/Typhoon.jpg" alt="" />
         </div>
         <div class="zoom_item" data-layer="1">
-          <img src="lee/img/comingsoon/Genie, Make A Wish(sd2).jpg" alt="" />
+          <img src="lee/img/Typhoon2.jpg" alt="" />
         </div>
         <div class="zoom_item" data-layer="2">
-          <img src="lee/img/comingsoon/Hotel Del Luna.webp" alt="" />
+          <img src="lee/img/DelLuna.webp" alt="" />
         </div>
         <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/When the Stars Gossip.webp" alt="" />
+          <img src="lee/img/Stars_Gossip.webp" alt="" />
         </div>
         <div class="zoom_item" data-layer="1">
-          <img src="lee/img/comingsoon/Our Unwritten Seoul2.jpg" alt="" />
+          <img src="lee/img/Seoul.jpg" alt="" />
         </div>
         <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/Genie, Make A Wish(sd5).jpg" alt="" />
+          <img src="lee/img/Genie.jpg" alt="" />
         </div>
         <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/Bon Appétit, Your Majesty.jpg" alt="" />
+          <img src="lee/img/Genie2.jpg" alt="" />
         </div>
         <div class="zoom_item" data-layer="1">
-          <img src="lee/img/comingsoon/Queen of Tears1-2.webp" alt="" />
+          <img src="lee/img/Queen2.webp" alt="" />
         </div>
         <div class="zoom_item" data-layer="3">
-          <img src="lee/img/comingsoon/Doona!.webp" alt="" />
+          <img src="lee/img/Seoul2.jpg" alt="" />
         </div>
         <div class="zoom_item" data-layer="2">
-          <img src="lee/img//comingsoon/Our Unwritten Seoul3.jpg" alt="" />
+          <img src="lee/img/Queen3.webp" alt="" />
         </div>
         <div class="zoom_item" data-layer="1">
-          <img src="/lee/img/comingsoon/Head Over Heels2.jpg" alt="" />
+          <img src="/lee/img/Heels.jpg" alt="" />
         </div>
       </div>
     </section>
