지금까지 작업한거 올리기_1

--- a/main_beck.html
+++ b/main_beck.html
@@ -302,7 +302,7 @@
                         <h2>VIEWER'S PLAYGROUND</h2>
                     </div>
                     <div class="VPcontents">
-                        <div class="VPcon01">
+                        <div class="VPcon01" data-aos="fade-right" data-aos-mirror="true">
                             <img src="./back/img/VP_img01.png" alt="Scenario Competition">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
@@ -312,7 +312,7 @@
                                 <p>Present your new story. <br> It could be the one to be brought to life on screen.</p>
                             </div>
                         </div><!-- //.VPcon01 -->
-                        <div class="VPcon02">
+                        <div class="VPcon02" data-aos="fade-left" data-aos-mirror="true">
                             <img src="./back/img/VP_img02.png" alt="Virtual Casting Vote">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
@@ -322,7 +322,7 @@
                                 <p>Pick a virtual casting combination <br>by changing the drama’s main character.</p>
                             </div>
                         </div><!-- //.VPcon02 -->
-                        <div class="VPcon03">
+                        <div class="VPcon03" data-aos="fade-right" data-aos-mirror="true">
                             <img src="./back/img/VP_img03.png" alt="Scenario Competition">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
