--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -99,7 +99,7 @@
 
     <section class="main_visual">
       <div class="zoom_container">
-        <h1 class="main_heading">Every Story<br />We Create</h1>
+        <h1 class="main_heading">Studio Dragon<br />Where Stories Come to Life</h1>
         <div class="zoom_item" data-layer="2">
           <img src="lee/img/Bon.jpg" alt="">
         </div>
