--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -310,7 +310,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/dont_push_peach.jpg" alt=""></img><em>
                                         "Don't Press the Peach" wins Best One-Act Drama in the International
                                         Competition
@@ -347,7 +347,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/BigDoor1.jpg" alt=""></img><em>
                                         "The Big Door Prize", a US TV series, debuted in Season 2 on Apple TV+
                                     </em>
@@ -426,7 +426,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/little_women2.jpg" alt=""></img><em>Little Women wins
                                         APAN Star Awards Best Drama</em>
                                 </li>
@@ -515,7 +515,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/DutyAfterschool.png" alt=""></img><em>
                                         "After School War Activities" invited to a French Seriesmania special
                                         screening
@@ -578,7 +578,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/OurBlues.png" alt=""></img><em>
                                         "Our Blues" won the Advertisers' Choice Program Award at the 2022 Korea
                                         Advertisers'
@@ -1070,7 +1070,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <img src="assets/image/dokkabi.jpg" alt=""></img><em>tvN's "Goblin"<br />Reaches
                                         20%
                                         Viewership Ratings</em>
