--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -99,7 +99,13 @@
 
     <section class="main_visual">
       <div class="zoom_container">
-        <h1 class="main_heading">Studio Dragon<br />Where Stories Come to Life</h1>
+        <h1 class="main_heading">Studio Dragon
+          <div class="eyes">
+            <div class="eye eye-left"></div>
+            <div class="eye eye-right"></div>
+          </div> <br />Where Stories Come to Life
+        </h1>
+
         <div class="zoom_item" data-layer="2">
           <img src="lee/img/Bon.jpg" alt="">
         </div>
@@ -223,7 +229,7 @@
         <li>
           <a href="#">
             <img src="./lee/img/our_Blues.jpg" alt="Poster 4">
-            <span class="poster-title">our Blues</span>
+            <span class="poster-title">Our Blues</span>
           </a>
         </li>
         <li>
@@ -283,7 +289,7 @@
         <li>
           <a href="#">
             <img src="./lee/img/Historical/Bon_Majesty.webp" alt="Poster 14">
-            <span class="poster-title">Bon Appétit, Your Majesty</span>
+            <span class="poster-title">Bon Apptit, Your Majesty</span>
           </a>
         </li>
         <li>
